[package]
name = "lila-push"
version = "1.0.0"
publish = false
description = "Web push microservice for lichess.org"
repository = "https://github.com/lichess-org/lila-push"
readme = "README.md"
license = "AGPL-3.0+"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
keywords = ["web-push", "vapid", "lichess"]
edition = "2021"

[dependencies]
axum = "0.5"
clap = { version = "4", features = ["derive", "deprecated"] }
env_logger = "0.9"
log = "0.4"
hyper-tls = { version = "0.5", features = ["vendored"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
web-push = { version = "0.9", features = ["hyper-client"], default-features = false }
