[package]
name = "lila-push"
publish = false
description = "Web push microservice for lichess.org"
repository = "https://github.com/lichess-org/lila-push"
readme = "README.md"
license = "AGPL-3.0+"
keywords = ["web-push", "vapid", "lichess"]
edition = "2021"

[dependencies]
axum = "0.8.0-rc.1"
clap = { version = "4", features = ["derive", "deprecated"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
web-push = { git = "https://github.com/niklasf/rust-web-push.git", branch = "lichess", features = ["hyper-client"], default-features = false }
listenfd = "1"
